--- a/admission.html
+++ b/admission.html
@@ -63,7 +63,7 @@
                             <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact us</a>
+                            <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mb-2 mb-lg-0 action-menu">
