--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                             <a class="nav-link" href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contact.html" class="action">Contact us</a>
+                            <a class="nav-link active" href="contact.html" class="action">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mb-2 mb-lg-0 action-menu">
