--- a/index.html
+++ b/index.html
@@ -233,9 +233,7 @@
                     <!--Section heading-->
                     <h2 class="h1-responsive font-weight-bold text-center my-4">Contact</h2>
                     <!--Section description-->
-                    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate
-                        to contact us directly. Our team will come back to you within
-                        a matter of hours to help you.</p>
+                   
 
                     <div class="row">
 
@@ -306,10 +304,10 @@
 
                         <!--Grid column-->
                         <div class="col-md-6 text-center">
-                            <!-- <iframe
+                            <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3913.5603161298386!2d78.75435586480475!3d11.220131642021393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bab03f878c448dd%3A0x8cc26ebfd292abd!2sM%20R%20V%20Higher%20Secondary%20School%2C%20SH%20142%2C%20Ammapalayam%2C%20Tamil%20Nadu%20621101!5e0!3m2!1sen!2sin!4v1679201147810!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                                 width="600" height="300px" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <!--Grid column-->
 
