--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                         <a href="login.html" style="color: #0411cb">CLASS I to IX</a>
                                     </li>
                                     <li>
-                                        <a href="login.html" style="color: #2c16ba">CLASS X to XII</a></li>
+                                        <a href="#" style="color: #2c16ba">CLASS X to XII</a></li>
                                 </ul>
 
                             </label>
@@ -293,7 +293,6 @@
                                 <!--Grid row-->
 
                             </form>
-
                             <div class="text-center text-md-left">
                                 <a class="btn btn-primary"
                                     onclick="document.getElementById('contact-form').submit();">Send</a>
