--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                                 <input type="checkbox" class="dd-input" id="test">
                                 <ul class="dd-menu" style="z-index: 9999999">
                                     <li style="border-bottom: solid;">
-                                        <a href="login.html" style="color: #0411cb">CLASS I to IX</a>
+                                        <a href="admissionform.html" style="color: #0411cb">CLASS I to X</a>
                                     </li>
                                     <li>
-                                        <a href="#" style="color: #2c16ba">CLASS X to XII</a></li>
+                                        <a href="#" style="color: #2c16ba">CLASS XI to XII</a></li>
                                 </ul>
 
                             </label>
