--- a/fac.html
+++ b/fac.html
@@ -156,9 +156,9 @@
 <div id="lab">
     <div class="lab-class">
     <h1>Labs</h1><br>
-    <div><span style="font-size: large; font-family: &quot;times new roman&quot;, serif; font-weight: bold; color: rgb(0, 0, 0);">COMPUTER LAB :</span></div><br>
+    <div><span style="font-size: large; font-family:&quot;times new roman&quot;, serif; font-weight: bold; color: rgb(0, 0, 0);">COMPUTER LAB :</span></div><br>
     <div class="lab-content">
-    <div>We go hand in hand with Modern technology. We have well equipped Computer lab with LAN, Internet &amp; Multimedia facilities, which provide the perfect resources to be aware with the current World Events, fascinating world of information &amp; technology. We have LCD monitors that are easier on eyes, All-inone PCs with new technology, os &amp; required software. We have well educated &amp; qualified faculty with one-to-one access.</div>
+    <p>We go hand in hand with Modern technology. We have well equipped Computer lab with LAN, Internet &amp; Multimedia facilities, which provide the perfect resources to be aware with the current World Events, fascinating world of information &amp; technology. We have LCD monitors that are easier on eyes, All-inone PCs with new technology, os &amp; required software. We have well educated &amp; qualified faculty with one-to-one access.</p>
 
            <div class="fac-img">
             <img src="img/lab1.jpg" alt="" style="height: 300px;object-fit:cover"/>
@@ -253,14 +253,14 @@
                         <h6 class="text-uppercase fw-bold mb-4">
                             Contact
                         </h6>
-                        <p><i class="bi bi-location me-3"></i> SH 142, Ammapalayam,
+                        <p><i class="bi bi-pin-map me-3"></i> SH 142, Ammapalayam,
                                                 Perambalur, Tamil Nadu - 621101</p>
                         <p>
                             <i class="bi bi-envelope me-3"></i>
                             mrvhighersecondary@gmail.com
                         </p>
                         <p><i class="bi bi-phone me-3"></i> + 91 8344 500 800</p>
-                        <p><i class="bi bi-print me-3"></i> + 91 6382 905 589</p>
+                        <p><i class="bi bi-phone me-3"></i> + 91 6382 905 589</p>
                     </div>
                     <!-- Grid column -->
                 </div>
