--- a/admission.html
+++ b/admission.html
@@ -73,7 +73,7 @@
                                 <input type="checkbox" class="dd-input" id="test">
                                 <ul class="dd-menu" style="z-index: 9999999">
                                     <li style="border-bottom: solid;">
-                                        <a href="login.html" style="color: #000">CLASS I to IX</a>
+                                        <a href="admissionform.html" style="color: #000">CLASS I to IX</a>
                                     </li>
                                     <li>
                                         <a href="login.html" style="color: #000">CLASS X to XII</a></li>
@@ -194,14 +194,14 @@
                         <h6 class="text-uppercase fw-bold mb-4">
                             Contact
                         </h6>
-                        <p><i class="bi bi-location me-3"></i> SH 142, Ammapalayam,
+                        <p><i class="bi bi-pin-map me-3"></i> SH 142, Ammapalayam,
                                                 Perambalur, Tamil Nadu - 621101</p>
                         <p>
                             <i class="bi bi-envelope me-3"></i>
                             mrvhighersecondary@gmail.com
                         </p>
                         <p><i class="bi bi-phone me-3"></i> + 91 8344 500 800</p>
-                        <p><i class="bi bi-print me-3"></i> + 91 6382 905 589</p>
+                        <p><i class="bi bi-phone me-3"></i> + 91 6382 905 589</p>
                     </div>
                     <!-- Grid column -->
                 </div>
