--- a/index.html
+++ b/index.html
@@ -367,14 +367,14 @@
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Contact
                             </h6>
-                            <p><i class="bi bi-location me-3"></i> SH 142, Ammapalayam,
+                            <p><i class="bi bi-pin-map me-3"></i> SH 142, Ammapalayam,
                                                     Perambalur, Tamil Nadu - 621101</p>
                             <p>
                                 <i class="bi bi-envelope me-3"><a href="mailto:kavinkumarvinoth12@gmail.com"></i>
                                 mrvhighersecondary@gmail.com</a>
                             </p>
                             <p><i class="bi bi-phone me-3"></i> + 91 8344 500 800</p>
-                            <p><i class="bi bi-print me-3"></i> + 91 6382 905 589</p>
+                            <p><i class="bi bi-phone me-3"></i> + 91 6382 905 589</p>
                         </div>
                         <!-- Grid column -->
                     </div>
