--- a/frontend/about.html
+++ b/frontend/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="./CSS/about.css">
-    <link rel="icon" type="image/x-icon" href="/img/mr.jpeg">
+    <link rel="icon" type="image/x-icon" href="./img/mr.jpeg">
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -61,18 +61,13 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <ul class="navbar-nav mb-2 mb-lg-0 action-menu">
+                    <ul class="navbar-nav mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <label class="dropdown" style="margin-bottom: 0rem;">
-                                <div class="dd-button">For Admission</div>
-                                <input type="checkbox" class="dd-input" id="test">
-                                <ul class="dd-menu" style="z-index: 9999999">
-                                    <li style="border-bottom: solid;">
-                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScaSheIDC2uIbI1C3EO4TuUb1YuK80EycAHrXU64NPzSFmESA/viewform?usp=sf_link" style="color: #000">CLASS I to IX</a>
-                                    </li>
-                                    <li>
-                                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSelSE05M7w0ZDT5tt6rcAzU75AafxtG4PisIHENl2sbqQu5ug/viewform?usp=sf_link" style="color: #000">CLASS X to XII</a></li>
-                                </ul>
+                            <label class="" style="margin-bottom: 0rem;">
+                                <div class="dd-button">
+                                    <a href="admissionform.html">For Admission </a></div>
+                               
+                              
 
                             </label>
                         </li>
