--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -173,7 +173,7 @@
                             <a href="index.html" class="text-reset">Home</a>
                         </p>
                         <p>
-                            <a href="" class="text-reset">Gallery</a>
+                            <a href="gallery.html" class="text-reset">Gallery</a>
                         </p>
                         <p>
                             <a href="about.html" class="text-reset">About</a>
@@ -193,9 +193,8 @@
                         <p><i class="bi bi-pin-map me-3"></i> SH 142, Ammapalayam,
                                                 Perambalur, Tamil Nadu - 621101</p>
                         <p>
-                            <i class="bi bi-envelope me-3"></i>
-                            mrvhighersecondary@gmail.com
-                        </p>
+                            <i class="bi bi-envelope me-3"><a href="mailto:kavinkumarvinoth12@gmail.com"></i>
+                                mrvhighersecondary@gmail.com</a></p>
                         <p><i class="bi bi-phone me-3"></i> + 91 8344 500 800</p>
                         <p><i class="bi bi-phone me-3"></i> + 91 6382 905 589</p>
                     </div>
