--- a/frontend/admission.html
+++ b/frontend/admission.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Admission</title>
     <link rel="stylesheet" href="./CSS/about.css">
     <link rel="icon" type="image/x-icon" href="./img/mr.jpeg">
     
@@ -19,7 +19,7 @@
          rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- End Bootstrap CSS -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Custom Css-->
   <link rel="stylesheet" href="./CSS/style.css">
   <!--End Custom Css-->
@@ -174,7 +174,7 @@
                             <a href="index.html" class="text-reset">Home</a>
                         </p>
                         <p>
-                            <a href="#!" class="text-reset">Gallery</a>
+                            <a href="gallery.html" class="text-reset">Gallery</a>
                         </p>
                         <p>
                             <a href="about.html" class="text-reset">About</a>
@@ -194,8 +194,8 @@
                         <p><i class="bi bi-pin-map me-3"></i> SH 142, Ammapalayam,
                                                 Perambalur, Tamil Nadu - 621101</p>
                         <p>
-                            <i class="bi bi-envelope me-3"></i>
-                            mrvhighersecondary@gmail.com
+                            <i class="bi bi-envelope me-3"><a href="mailto:kavinkumarvinoth12@gmail.com"></i>
+                                mrvhighersecondary@gmail.com</a>
                         </p>
                         <p><i class="bi bi-phone me-3"></i> + 91 8344 500 800</p>
                         <p><i class="bi bi-phone me-3"></i> + 91 6382 905 589</p>
