--- a/frontend/about.html
+++ b/frontend/about.html
@@ -83,8 +83,8 @@
             <!--Section description-->
             <div class="row  pt-5 pb-5">
 
-                <div class="col-lg-5 align-items-stretch video-box"
-                    style='background-image: url("./img/lab1.jpg");'>
+                <div class="col-lg-4 align-items-stretch video-box"
+                    style='background-image: url("./mrvimg/sd2.JPG");'>
                     
                 </div>
 
