--- a/frontend/fac.html
+++ b/frontend/fac.html
@@ -28,8 +28,8 @@
     <header>
         <!--Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <!-- <div class="mrvlogo">
-                <img id="logo" src="img/mr.jpeg" alt="logo"></div> -->
+            <div class="mrvlogo">
+                <img id="logo" src="img/mr.jpeg" alt="logo"></div>
             <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <h2 class="fw-bold  mb-2 mb-lg-0 mb-sm nav-bar-header">MRV HIGHER SECONDARY SCHOOL</h2>
