--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header1">
         <section id="topbar" class="mb-2 mb-lg-0 mb-sm-0 d-none d-lg-flex align-items-center pt-2 pb-2 bg-primary text-white topbar-transparent">
        <div class="container">
          <div class="row">
@@ -61,7 +61,7 @@
        </div>
      </section>
 
-    <header>
+    <header class="header2">
         <!--Navbar Start-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="mrvlogo">
