--- a/frontend/index.html
+++ b/frontend/index.html
@@ -386,7 +386,7 @@
                                 <a href="index.html" class="text-reset">Home</a>
                             </p>
                             <p>
-                                <a href="" class="text-reset">Gallery</a>
+                                <a href="gallery.html" class="text-reset">Gallery</a>
                             </p>
                             <p>
                                 <a href="about.html" class="text-reset">About</a>
